# PasswordKeepManger

docs/superpowers/plans/: 2026-04-03-passkeep-phase1-rust-core.md  2026-04-04-phase2-vault-operations.md
docs/superpowers/specs/: 2026-04-03-password-manager-design.md  2026-04-04-phase2-vault-operations-design.md
passkeep-core/: Cargo.toml
passkeep-core/src/: lib.rs
passkeep-core/src/crypto/: aes.rs  argon2.rs  blake3.rs  encryption.rs  hkdf.rs  kdf.rs  keyfile.rs  master_key.rs  mod.rs  rng.rs
passkeep-core/src/ffi/: mod.rs  simple.rs
passkeep-core/src/import_export/: format.rs  json_exporter.rs  json_importer.rs  mod.rs
passkeep-core/src/models/: entry.rs  mod.rs  password.rs  vault.rs
passkeep-core/src/storage/: backup.rs  database.rs  entry_service.rs  error.rs  lock_state.rs  migrations.rs  mod.rs  schema.sql  schema_v2.sql
passkeep-core/src/vault/: mod.rs  unlock.rs
